# json-resume

./: .gitignore  CLAUDE.md  README.md  html_generator.py  html_template.json  jakes_resume_pylatex.tex  jakes_resume_pylatex_v_corrected.tex  jakes_resume_pylatex_v_namefix.tex  pdf_generator.py  pyproject.toml  resume_data.json  resume_generator.py  resume_to_pdf.py  theme.json
